# SimulatedAnnealingVertexCover

./: README.md  meson.build
reporte/: Reporte.tex
sql/: CANADA.sql  CDMX.sql  MEX.sql  USA.sql
src/: DAO.cpp  DAO.hpp  Graph.cpp  Graph.hpp  Heuristic.cpp  Heuristic.hpp  Solution.cpp  Solution.hpp  Vertex.cpp  Vertex.hpp  main.cpp
test/src/: DAO_Test.cpp  Graph_Test.cpp  Solution_Test.cpp  Vertex_Test.cpp
